--- a/css/article-2.css
+++ b/css/article-2.css
@@ -12,6 +12,7 @@
     --line-break: #88846f;
     --accent: #a6e22e;
     --accent-hover: #4e94ce;
+    --code: #fd971f;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -35,7 +36,7 @@ li {
 
 body {
     background-color: var(--background-color);
-    color: var(--secondary-text);
+    color: var(--body-text);
     font-family: var(--font-mono);
     font-weight: 500;
     line-height: 1.5rem;
@@ -108,6 +109,10 @@ body {
     font-weight: 700;
 }
 
+.title p {
+    max-width: 44ch;
+}
+
 .publish-date {
     font-size: 0.8rem;
     text-align: right;
@@ -118,8 +123,19 @@ img {
     margin-bottom: 1rem;
 }
 
-.article-content p {
+.article-subheading {
+    padding: 1.5rem 0;
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.article-content > p {
     padding-bottom: 1.5rem;
+}
+
+code {
+    color: var(--code);
+    font: inherit;
 }
 
 .article-link {
@@ -130,6 +146,58 @@ img {
 .article-link:hover {
     border-bottom: 1px solid var(--accent-hover);
     color: var(--accent-hover);
+}
+
+.article-list {
+    padding-bottom: 1.5rem;
+}
+
+.article-list > li {
+    display: flex;
+}
+
+.article-list > li::before {
+    content: "-";
+    padding-right: 1rem;
+    color: var(--accent);
+}
+
+blockquote {
+    padding-bottom: 1.5rem;
+    color: var(--line-break);
+}
+
+blockquote div {
+    display: flex;
+}
+
+.marker {
+    margin-right: 1rem;
+}
+
+figure {
+    margin-bottom: 1.5rem;
+}
+
+.img-standard {
+    padding: 0.6rem 0;
+    background-color: var(--background-color);
+}
+
+.line-break {
+    margin-bottom: 1.5rem;
+    border-width: 0px;
+    color: var(--line-break);
+}
+
+.line-break::before {
+    content: "//";
+    padding-right: 0.5rem;
+}
+
+.line-break::after {
+    content: "--------------------------------------------------------------";
+    font-variant-ligatures: none;
 }
 
 footer {
