--- a/css/project.css
+++ b/css/project.css
@@ -29,12 +29,15 @@ body {
     color: var(--body-text);
     font-weight: 500;
 }
+
+.container {
+    max-width: 81ch;
+    margin: 4.5rem auto 0;
+}
 li {
     list-style: none;
 }
-header {
-    margin-top: 4.5rem;
-}
+
 .nav-list {
     display: flex;
     margin: 0 auto;
@@ -80,14 +83,14 @@ header {
     padding: 0.5rem 0 0.5rem 0.5rem;
 }
 main {
-    max-width: 81ch;
     color: var(--body-text);
-    margin: auto;
 }
 
 .editor {
+    max-width: 81ch;
     background-color: var(--editor-background);
     min-height: 100vh;
+    margin: auto;
 }
 .first-paragraph {
     margin-left: 3rem;
@@ -114,7 +117,6 @@ h2 {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    padding: px;
     margin-left: 3rem;
     margin-right: 3rem;
     padding-left: 40px;
@@ -131,10 +133,17 @@ p {
     color: var(--accent-hover);
 }
 a {
+    text-decoration: none;
     color: var(--accent);
 }
 a:hover {
     color: var(--accent-hover);
+}
+.project-link {
+    border-bottom: 1px solid var(--accent);
+}
+.project-link:hover {
+    border-bottom: 1px solid var(--accent-hover);
 }
 hr {
     border-top: 3px dashed;
@@ -147,4 +156,88 @@ hr {
     display: flex;
     gap: 30px;
     justify-content: space-between;
+}
+
+.line-break {
+    margin: 1.5rem 0;
+    padding-left: 5.3rem;
+    padding-right: 4.4rem;
+    border-width: 0px;
+    color: var(--line-break);
+}
+
+.line-break::before {
+    content: "//";
+    padding-right: 0.5rem;
+}
+
+.line-break::after {
+    content: "--------------------------------------------------------------";
+    font-variant-ligatures: none;
+}
+footer {
+    display: flex;
+    justify-content: space-between;
+    min-height: 100vh;
+    padding-left: 5.3rem;
+    padding-right: 4.4rem;
+}
+
+.social-links {
+    display: flex;
+}
+
+.social-link {
+    padding-right: 0.7rem;
+}
+
+.social-link a {
+    border-bottom: 1px solid var(--accent);
+    color: var(--accent);
+    text-decoration: none;
+}
+
+.social-link a:hover {
+    border-bottom: 1px solid var(--accent-hover);
+    color: var(--accent-hover);
+}
+
+.color-theme-name {
+    position: relative;
+    cursor: pointer;
+}
+
+.arrow {
+    color: var(--accent);
+    font-size: 1rem;
+}
+
+.color-theme-name:hover,
+.color-theme-name:hover .arrow {
+    color: #4e94ce;
+}
+
+.theme-picker {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: none;
+    background: none;
+    color: var(--body-text);
+    opacity: 0;
+    -webkit-appearance: none;
+    font-size: 1rem;
+    font-weight: 500;
+    font-family: "Fira code", monospace;
+    cursor: pointer;
+}
+
+.theme-picker:focus,
+.theme-picker:active {
+    outline: none;
+}
+
+.theme-picker > option {
+    background-color: #1e1f1c;
+    color: #cfcfc2;
 }
