--- a/css/rundown.css
+++ b/css/rundown.css
@@ -176,15 +176,42 @@ footer {
     color: var(--accent-hover);
 }
 
-.color-theme {
-    font-weight: 700;
+.color-theme-name {
+    position: relative;
+    cursor: pointer;
 }
 
-.color-theme span {
+.arrow {
+    font-size: 1rem;
     color: var(--accent);
 }
 
-.color-theme:hover,
-.color-theme:hover span {
-    color: var(--accent-hover);
+.color-theme-name:hover,
+.color-theme-name:hover .arrow {
+    color: #4e94ce;
+}
+
+.theme-picker {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: none;
+    background: none;
+    color: var(--body-text);
+    opacity: 0;
+    -webkit-appearance: none;
+    font-size: 1rem;
+    font-weight: 500;
+    font-family: "Fira code", monospace;
+    cursor: pointer;
+}
+
+.theme-picker:focus,
+.theme-picker:active {
+    outline: none;
+}
+
+.theme-picker > option {
+    background-color: #1e1f1c;
+    color: #cfcfc2;
 }
