--- a/css/article-5.css
+++ b/css/article-5.css
@@ -12,6 +12,11 @@
     --line-break: #88846f;
     --accent: #a6e22e;
     --accent-hover: #4e94ce;
+    --color-scrollbar-border: #7f7f7f4d;
+    --color-scrollbar-thumb: #79797966;
+    --color-scrollbar-thumb-hover: #646464b3;
+    --color-scrollbar-thumb-active: #bfbfbf66;
+    --color-scrollbar-shadow: #000000;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -23,6 +28,23 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+*::-webkit-scrollbar-corner,
+*::-webkit-scrollbar-button {
+    display: none;
+}
+
+*::-webkit-scrollbar-thumb {
+    background: var(--color-scrollbar-thumb);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background: var(--color-scrollbar-thumb-hover);
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background: var(--color-scrollbar-thumb-active);
 }
 
 a {
@@ -39,6 +61,10 @@ body {
     font-family: var(--font-mono);
     font-weight: 500;
     line-height: 1.5rem;
+}
+
+body::-webkit-scrollbar {
+    border-left: 1px solid var(--color-scrollbar-border);
 }
 
 .container {
