--- a/css/article_4.css
+++ b/css/article_4.css
@@ -1,5 +1,6 @@
 /* -------------------------------------------GLOBAL STYLING------------------------------------------- */
-:root {
+:root,
+:root.monokai {
     --background-color: #1e1f1c;
     --editor-background: #272822;
     --navbar-text: #ccccc7;
@@ -13,20 +14,135 @@
     --line-break: #88846f;
     --accent: #a6e22e;
     --accent-hover: #4e94ce;
-    --article3-heading-paragraph: #cacabe;
-    --article3-gray-text: rgb(136, 132, 111);
     --anchortag-orange-color: #fd971f;
-    --example-text: #22231e;
-    --editor-text-2: #66d9ef;
-    --editor-1-text: #e6db74;
-    --text-red: #a12550;
-    --text-light-gray: #a6a79b;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #79797966;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #bfbfbf66;
     --color-scrollbar-shadow: #000000;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
 
+:root.dark-plus {
+    --background-color: #252526;
+    --editor-background: #1e1e1e;
+    --navbar-text: #ffffff80;
+    --inactive-navbar-background: #2d2d2d;
+    --active-navbar-text: #ffffff;
+    --body-text: #d4d4d4;
+    --secondary-text: #bbbbbb;
+    --editor-line-number: #858585;
+    --editor-line-number-hover: #c6c6c6;
+    --highlighted-line: transparent;
+    --line-break: #6a9955;
+    --accent: #4ec9b0;
+    --accent-hover: #4e94ce;
+    --anchortag-orange-color: #ce9178;
+    --color-scrollbar-border: #7f7f7f4d;
+    --color-scrollbar-thumb: #79797966;
+    --color-scrollbar-thumb-hover: #646464b3;
+    --color-scrollbar-thumb-active: #bfbfbf66;
+    --color-scrollbar-shadow: #000000;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+:root.light-plus {
+    --background-color: #f3f3f3;
+    --editor-background: #ffffff;
+    --navbar-text: #333333b3;
+    --inactive-navbar-background: #ececec;
+    --active-navbar-text: #333333;
+    --body-text: #000000;
+    --secondary-text: #444444;
+    --editor-line-number: #237893;
+    --editor-line-number-hover: #0b216f;
+    --highlighted-line: transparent;
+    --line-break: #008000;
+    --accent: #267f99;
+    --accent-hover: #0000ff;
+    --anchortag-orange-color: #800000;
+    --color-scrollbar-border: #7f7f7f4d;
+    --color-scrollbar-thumb: #64646466;
+    --color-scrollbar-thumb-hover: #646464b3;
+    --color-scrollbar-thumb-active: #00000099;
+    --color-scrollbar-shadow: #dddddd;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+:root.github-dark {
+    --background-color: #1b1f23;
+    --editor-background: #24292e;
+    --navbar-text: #959da5;
+    --inactive-navbar-background: #1f2428;
+    --active-navbar-text: #e1e4e8;
+    --body-text: #e1e4e8;
+    --secondary-text: #959da5;
+    --editor-line-number: #768390;
+    --editor-line-number-hover: #e1e4e8;
+    --highlighted-line: #2b3036;
+    --line-break: #6a737d;
+    --accent: #96d0ff;
+    --accent-hover: #4e94ce;
+    --anchortag-orange-color: #9ecbff;
+    --color-scrollbar-border: #1b1f23;
+    --color-scrollbar-thumb: #6a737d33;
+    --color-scrollbar-thumb-hover: #6a737d44;
+    --color-scrollbar-thumb-active: #6a737d88;
+    --color-scrollbar-shadow: #00000088;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+
+:root.github-light {
+    --background-color: #f6f8fa;
+    --editor-background: #ffffff;
+    --navbar-text: #6a737d;
+    --inactive-navbar-background: #eff2f6;
+    --active-navbar-text: #2f363d;
+    --body-text: #24292e;
+    --secondary-text: #6a737d;
+    --editor-line-number: #1b1f234d;
+    --editor-line-number-hover: #24292e;
+    --highlighted-line: #f6f8fa;
+    --line-break: #6a737d;
+    --accent: #032f62;
+    --accent-hover: #0000ff;
+    --anchortag-orange-color: #032f62;
+    --color-scrollbar-border: #ffffff;
+    --color-scrollbar-thumb: #959da533;
+    --color-scrollbar-thumb-hover: #959da544;
+    --color-scrollbar-thumb-active: #959da588;
+    --color-scrollbar-shadow: #6a737d33;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+
+:root.solarized-light {
+    --background-color: #eee8d5;
+    --editor-background: #fdf6e3;
+    --navbar-text: #586e75;
+    --inactive-navbar-background: #e4ddc9;
+    --active-navbar-text: #333333;
+    --body-text: #333333;
+    --secondary-text: #586e75;
+    --editor-line-number: #237893;
+    --editor-line-number-hover: #567983;
+    --highlighted-line: #eee8d5;
+    --line-break: #93a1a1;
+    --accent: #268bd2;
+    --accent-hover: #0000ff;
+    --anchortag-orange-color: #2aa198;
+    --color-scrollbar-border: #7f7f7f4d;
+    --color-scrollbar-thumb: #64646466;
+    --color-scrollbar-thumb-hover: #646464b3;
+    --color-scrollbar-thumb-active: #00000099;
+    --color-scrollbar-shadow: #dddddd;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -138,19 +254,19 @@ h1 {
     color: var(--body-text);
 }
 .heading-text {
-    color: var(--article3-heading-paragraph);
+    color: var(--secondary-text);
     font-size: medium;
 }
 
 .time {
     font-size: 0.8rem;
     white-space: nowrap;
-    color: var(--article3-heading-paragraph);
+    color: var(--secondary-text);
 }
 .time1 {
     font-size: 0.8rem;
     text-align: right;
-    color: var(--article3-heading-paragraph);
+    color: var(--secondary-text);
 }
 .image-container {
     padding-top: 1.5rem;
