--- a/css/blog-article1.css
+++ b/css/blog-article1.css
@@ -1,13 +1,163 @@
+:root,
+:root.monokai {
+    --background-color: #1e1f1c;
+    --editor-background: #272822;
+    --navbar-text: #ccccc7;
+    --inactive-navbar-background: #34352f;
+    --active-navbar-text: #ffffff;
+    --body-text: #f8f8f2;
+    --secondary-text: #cfcfc2;
+    --editor-line-number: #90908a;
+    --editor-line-number-hover: #c2c2bf;
+    --highlighted-line: #3e3d32;
+    --line-break: #88846f;
+    --accent: #a6e22e;
+    --accent-hover: #4e94ce;
+    --color-scrollbar-border: #7f7f7f4d;
+    --color-scrollbar-thumb: #79797966;
+    --color-scrollbar-thumb-hover: #646464b3;
+    --color-scrollbar-thumb-active: #bfbfbf66;
+    --color-scrollbar-shadow: #000000;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+
+:root.dark-plus {
+    --background-color: #252526;
+    --editor-background: #1e1e1e;
+    --navbar-text: #ffffff80;
+    --inactive-navbar-background: #2d2d2d;
+    --active-navbar-text: #ffffff;
+    --body-text: #d4d4d4;
+    --secondary-text: #bbbbbb;
+    --editor-line-number: #858585;
+    --editor-line-number-hover: #c6c6c6;
+    --highlighted-line: transparent;
+    --line-break: #6a9955;
+    --accent: #4ec9b0;
+    --accent-hover: #4e94ce;
+    --color-scrollbar-border: #7f7f7f4d;
+    --color-scrollbar-thumb: #79797966;
+    --color-scrollbar-thumb-hover: #646464b3;
+    --color-scrollbar-thumb-active: #bfbfbf66;
+    --color-scrollbar-shadow: #000000;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+:root.light-plus {
+    --background-color: #f3f3f3;
+    --editor-background: #ffffff;
+    --navbar-text: #333333b3;
+    --inactive-navbar-background: #ececec;
+    --active-navbar-text: #333333;
+    --body-text: #000000;
+    --secondary-text: #444444;
+    --editor-line-number: #237893;
+    --editor-line-number-hover: #0b216f;
+    --highlighted-line: transparent;
+    --line-break: #008000;
+    --accent: #267f99;
+    --accent-hover: #0000ff;
+    --color-scrollbar-border: #7f7f7f4d;
+    --color-scrollbar-thumb: #64646466;
+    --color-scrollbar-thumb-hover: #646464b3;
+    --color-scrollbar-thumb-active: #00000099;
+    --color-scrollbar-shadow: #dddddd;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+:root.github-dark {
+    --background-color: #1b1f23;
+    --editor-background: #24292e;
+    --navbar-text: #959da5;
+    --inactive-navbar-background: #1f2428;
+    --active-navbar-text: #e1e4e8;
+    --body-text: #e1e4e8;
+    --secondary-text: #959da5;
+    --editor-line-number: #768390;
+    --editor-line-number-hover: #e1e4e8;
+    --highlighted-line: #2b3036;
+    --line-break: #6a737d;
+    --accent: #96d0ff;
+    --accent-hover: #4e94ce;
+    --color-scrollbar-border: #1b1f23;
+    --color-scrollbar-thumb: #6a737d33;
+    --color-scrollbar-thumb-hover: #6a737d44;
+    --color-scrollbar-thumb-active: #6a737d88;
+    --color-scrollbar-shadow: #00000088;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+
+:root.github-light {
+    --background-color: #f6f8fa;
+    --editor-background: #ffffff;
+    --navbar-text: #6a737d;
+    --inactive-navbar-background: #eff2f6;
+    --active-navbar-text: #2f363d;
+    --body-text: #24292e;
+    --secondary-text: #6a737d;
+    --editor-line-number: #1b1f234d;
+    --editor-line-number-hover: #24292e;
+    --highlighted-line: #f6f8fa;
+    --line-break: #6a737d;
+    --accent: #032f62;
+    --accent-hover: #0000ff;
+    --color-scrollbar-border: #ffffff;
+    --color-scrollbar-thumb: #959da533;
+    --color-scrollbar-thumb-hover: #959da544;
+    --color-scrollbar-thumb-active: #959da588;
+    --color-scrollbar-shadow: #6a737d33;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+
+:root.solarized-light {
+    --background-color: #eee8d5;
+    --editor-background: #fdf6e3;
+    --navbar-text: #586e75;
+    --inactive-navbar-background: #e4ddc9;
+    --active-navbar-text: #333333;
+    --body-text: #333333;
+    --secondary-text: #586e75;
+    --editor-line-number: #237893;
+    --editor-line-number-hover: #567983;
+    --highlighted-line: #eee8d5;
+    --line-break: #93a1a1;
+    --accent: #268bd2;
+    --accent-hover: #0000ff;
+    --color-scrollbar-border: #7f7f7f4d;
+    --color-scrollbar-thumb: #64646466;
+    --color-scrollbar-thumb-hover: #646464b3;
+    --color-scrollbar-thumb-active: #00000099;
+    --color-scrollbar-shadow: #dddddd;
+    --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
+        system-ui, Ubuntu, sans-serif;
+    --font-mono: Fira Code, monospace;
+}
+
 *::-webkit-scrollbar-corner,
 *::-webkit-scrollbar-button {
     display: none;
 }
 *::-webkit-scrollbar-thumb {
-    background: #79797966;
+    background: var(--color-scrollbar-thumb);
+}
+*::-webkit-scrollbar-thumb:hover {
+    background: var(--color-scrollbar-thumb-hover);
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background: var(--color-scrollbar-thumb-active);
 }
 body {
     box-sizing: border-box;
-    background-color: #1e1f1c;
+    background-color: var(--background-color);
     font-family: "Fira code", monospace;
     /* z-index: 30;
     text-size-adjust: 100%; */
@@ -37,7 +187,7 @@ body::-webkit-scrollbar {
 
 ul a {
     text-decoration: none;
-    color: #fff;
+    color: var(--body-text);
     padding-bottom: 0;
     font-size: 13px;
 }
@@ -47,20 +197,20 @@ ul a {
 }
 
 .home {
-    background-color: rgb(52, 53, 47);
+    background-color: var(--inactive-navbar-background);
     padding: 9px 63px 9px 12px;
-    color: rgb(207, 207, 194);
+    color: var(--navbar-text);
 }
 
 .blog {
-    background-color: rgb(39, 40, 34);
+    background-color: var(--editor-background);
     padding: 9px 72px 9px 12px;
 }
 
 .projects {
-    background-color: rgb(52, 53, 47);
+    background-color: var(--inactive-navbar-background);
     padding: 9px 60px 9px 12px;
-    color: rgb(207, 207, 194);
+    color: var(--navbar-text);
 }
 
 /* Content */
@@ -73,14 +223,14 @@ ul a {
 .main-content {
     width: 639px;
     padding: 0 67px;
-    background-color: #272822;
+    background-color: var(--editor-background);
 }
 
 /* Editor */
 
 .editor {
     text-align: left;
-    color: #fff;
+    color: var(--body-text);
     width: 640px;
 }
 /* Header */
@@ -89,7 +239,7 @@ h1 {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 20px;
-    color: rgb(248, 248, 242);
+    color: var(--body-text);
     font-weight: 700px;
     padding-top: 25px;
 }
@@ -97,7 +247,7 @@ h1 {
 header p {
     margin-top: 0;
     margin-bottom: 30px;
-    color: rgb(207, 207, 194);
+    color: var(--body-text);
 }
 
 h3 {
@@ -130,11 +280,11 @@ header {
 
 .article-div a {
     text-decoration: none;
-    color: #fff;
+    color: var(--body-text);
 }
 
 .article-div a:hover {
-    color: #4e94ce;
+    color: var(--accent-hover);
 }
 
 .article img {
@@ -144,7 +294,7 @@ header {
 
 .article time {
     font-size: 13px;
-    color: rgb(207, 207, 194);
+    color: var(--secondary-text);
     padding-top: 10px;
 }
 
@@ -181,7 +331,7 @@ footer ul {
 }
 
 footer ul a {
-    color: rgb(166, 226, 46);
+    color: var(--accent);
     text-decoration: underline;
     text-underline-position: under;
     letter-spacing: 1px;
@@ -193,23 +343,23 @@ ul span {
 }
 
 footer ul a:hover {
-    color: #4e94ce;
+    color: var(--accent-hover);
 }
 
 .arrow {
-    color: rgb(166, 226, 46);
+    color: var(--accent);
 }
 
 /* article1.html */
 .article1 {
-    background-color: rgb(39, 40, 34);
+    background-color: var(--editor-background);
     padding: 9px 9px 9px 9px;
-    color: rgb(255, 255, 255);
+    color: var(--active-navbar-text);
     font-style: italic;
 }
 
 .article1-blog {
-    background-color: rgb(52, 53, 47);
+    background-color: var(--inactive-navbar-background);
     padding: 9px 72px 9px 12px;
 }
 
@@ -231,7 +381,7 @@ footer ul a:hover {
 .time-nolines {
     padding-top: 30px;
     font-size: 13px;
-    color: rgb(207, 207, 194);
+    color: var(--secondary-text);
     line-height: 1.5;
 }
 
@@ -240,13 +390,13 @@ footer ul a:hover {
 }
 
 .green-link {
-    color: rgb(166, 226, 46);
+    color: var(--accent);
     text-underline-position: under;
     letter-spacing: 1px;
 }
 
 .green-link:hover {
-    color: #4e94ce;
+    color: var(--accent-hover);
 }
 
 .color-theme-name {
@@ -255,7 +405,7 @@ footer ul a:hover {
 
 .color-theme-name:hover,
 .color-theme-name:hover .arrow {
-    color: #4e94ce;
+    color: var(--accent-hover);
 }
 
 .theme-picker {
@@ -265,7 +415,7 @@ footer ul a:hover {
     background: none;
     opacity: 0;
     border: none;
-    color: #fff;
+    color: var(--body-text);
     -webkit-appearance: none;
     margin-right: -70px;
     font-size: 16px;
@@ -279,6 +429,6 @@ footer ul a:hover {
 }
 
 .theme-picker > option {
-    background-color: #1e1f1c;
-    color: #cfcfc2;
+    background-color: var(--background-color);
+    color: var(--secondary-text);
 }
