adjust the size of article images

--- a/styles.css
+++ b/styles.css
@@ -480,7 +480,10 @@ footer {
 
     .article-img {
         width: 18.6rem;
+        max-width: 100%;
         height: 10.5rem;
+        object-fit: contain;
+        background-color: var(--background-color);
     }
 
     .article-description {
