--- a/css/article-2.css
+++ b/css/article-2.css
@@ -176,7 +176,7 @@ li {
 
 body {
     background-color: var(--background-color);
-    color: var(--body-text);
+    color: var(--secondary-text);
     font-family: var(--font-mono);
     font-weight: 500;
     line-height: 1.5rem;
@@ -213,8 +213,8 @@ body::-webkit-scrollbar {
 }
 
 .nav-link div {
-    width: 7.5rem;
-    padding: 0.3rem 0 0.3rem 0.5rem;
+    min-width: 7.5rem;
+    padding: 0.4rem 0 0.4rem 0.5rem;
 }
 
 .article-tab {
@@ -268,7 +268,7 @@ img {
 }
 
 .article-subheading {
-    padding: 1.5rem 0;
+    padding: 1rem 0 1.5rem;
     font-size: 1.25rem;
     font-weight: 700;
 }
@@ -405,4 +405,83 @@ footer {
 .theme-picker > option {
     background-color: #1e1f1c;
     color: #cfcfc2;
+}
+
+@media (max-width: 599px) {
+    .editor {
+        padding-left: 5ch;
+        padding-right: 2ch;
+    }
+    .editor-content {
+        max-width: 44ch;
+    }
+
+    .container {
+        margin-top: 1px;
+    }
+
+    nav {
+        overflow: auto;
+    }
+
+    .nav-list {
+        flex: 0 0 auto;
+    }
+
+    .nav-item {
+        flex: 0 0 auto;
+        min-width: 25%;
+    }
+
+    .nav-link div {
+        min-width: 0;
+    }
+
+    .title h1 {
+        font-size: 1.09rem;
+    }
+
+    p {
+        line-height: 1.4;
+    }
+
+    p,
+    footer {
+        font-size: 0.875rem;
+    }
+
+    header {
+        flex-direction: column;
+    }
+
+    .publish-date p {
+        font-size: 0.71rem;
+        text-align: left;
+    }
+
+    .publish-date > p:nth-of-type(2) {
+        display: none;
+    }
+
+    img {
+        width: 18.6rem;
+        max-width: 100%;
+        height: 10.5rem;
+        object-fit: contain;
+        background-color: var(--background-color);
+    }
+
+    footer {
+        min-height: 0;
+        flex-direction: column;
+    }
+
+    .social-links {
+        flex-direction: column;
+        padding-bottom: 1.5rem;
+    }
+
+    .bullet {
+        display: none;
+    }
 }
