--- a/styles.css
+++ b/styles.css
@@ -421,6 +421,9 @@ footer {
 }
 
 @media (max-width: 599px) {
+    body::-webkit-scrollbar {
+        display: none;
+    }
     .editor {
         padding-left: 5ch;
         padding-right: 2ch;
