--- a/css/article-5.css
+++ b/css/article-5.css
@@ -175,7 +175,7 @@ li {
 
 body {
     background-color: var(--background-color);
-    color: var(--body-text);
+    color: var(--secondary-text);
     font-family: var(--font-mono);
     font-weight: 500;
     line-height: 1.5rem;
@@ -337,4 +337,89 @@ footer {
 .theme-picker > option {
     background-color: #1e1f1c;
     color: #cfcfc2;
+}
+
+@media (max-width: 599px) {
+    body::-webkit-scrollbar {
+        display: none;
+    }
+    .editor {
+        padding-left: 5ch;
+        padding-right: 2ch;
+    }
+    .editor-content {
+        max-width: 40ch;
+    }
+
+    .container {
+        margin-top: 1px;
+    }
+
+    nav {
+        overflow: auto;
+    }
+    nav::-webkit-scrollbar {
+        display: none;
+    }
+
+    .nav-list {
+        flex: 0 0 auto;
+    }
+
+    .nav-item {
+        flex: 0 0 auto;
+        min-width: 25%;
+    }
+
+    .nav-link div {
+        min-width: 0;
+    }
+
+    .title h1 {
+        font-size: 1.09rem;
+    }
+
+    p {
+        line-height: 1.4;
+    }
+
+    p,
+    footer {
+        font-size: 0.875rem;
+    }
+
+    header {
+        flex-direction: column;
+    }
+
+    .publish-date p {
+        font-size: 0.71rem;
+        text-align: left;
+    }
+
+    .publish-date > p:nth-of-type(2) {
+        display: none;
+    }
+
+    img {
+        width: 18.6rem;
+        max-width: 100%;
+        height: 10.5rem;
+        object-fit: contain;
+        background-color: var(--background-color);
+    }
+
+    footer {
+        min-height: 0;
+        flex-direction: column;
+    }
+
+    .social-links {
+        flex-direction: column;
+        padding-bottom: 1.5rem;
+    }
+
+    .bullet {
+        display: none;
+    }
 }
